tests/invalid_ast_samples/9202b8548441a2959111ed2169f659b7f13fd6f9f165c5fc8f067c733bf06111.py
from ast import Assign
from ast import Constant
from ast import JoinedStr
from ast import Module
from ast import Store
from ast import Tuple

tree = Module(
    body=[
        Assign(
            targets=[Tuple(elts=[JoinedStr(values=[])], ctx=Store())],
            value=Constant(value=False),
        )
    ],
    type_ignores=[],
)

# version: 3.12.0
#
# Source:
# f'', = False
#
#
# Error:
#     SyntaxError('cannot assign to f-string expression', ('<file>', 1, 1, "f'', = False\n", 1, 4))
